<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorTransparent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3"
            app:srcCompat="@mipmap/ic_launcher" />

        <com.android.bluetoothmusic.widgets.EditorView
            android:id="@+id/emailEditor"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin_10"
            android:layout_height="wrap_content"

            app:symmetricPadding="@dimen/padding_spacing_1"
            app:editorSymmetricPadding="@dimen/padding_spacing_10"
            app:backgroundImageColor="@color/colorSlateBlue"
            app:imageSymmetricPadding="@dimen/padding_spacing_10"
            app:backgroundEditor="@drawable/ic_border"
            app:hintEditor="@string/enter_email"
            app:image="@drawable/ic_email"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

        <com.android.bluetoothmusic.widgets.EditorView
            android:id="@+id/passwordEditor"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin_10"
            android:layout_height="wrap_content"

            app:symmetricPadding="@dimen/padding_spacing_1"
            app:editorSymmetricPadding="@dimen/padding_spacing_10"
            app:backgroundImageColor="@color/colorSlateBlue"
            app:imageSymmetricPadding="@dimen/padding_spacing_10"
            app:backgroundEditor="@drawable/ic_border"
            app:hintEditor="@string/enter_password"
            app:image="@drawable/ic_password"
            app:layout_constraintTop_toBottomOf="@+id/emailEditor" />

        <TextView
            android:id="@+id/forgotPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_32"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/colorLightBlack"
            android:layout_margin="@dimen/margin_10"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditor" />

        <TextView
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_login"
            android:text="@string/login"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/margin_10"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButton" />

        <TextView
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up_here"
            android:textAllCaps="false"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/colorLightBlack"
            android:layout_margin="@dimen/margin_10"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
