<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3"
            app:srcCompat="@mipmap/ic_launcher" />

        <com.android.bluetoothmusic.widgets.TextViewer
            android:id="@+id/usernameTextViewer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_56"
            android:layout_margin="@dimen/margin_10"
            android:gravity="center_vertical"

            app:backgroundEditor="@drawable/ic_border"
            app:backgroundImageColor="@color/colorSlateBlue"
            app:editorSymmetricPadding="@dimen/padding_spacing_10"
            app:hintEditor="@string/enter_username"
            app:image="@drawable/ic_profile"
            app:imageSymmetricPadding="@dimen/padding_spacing_10"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView"
            app:symmetricPadding="@dimen/padding_spacing_1" />

        <com.android.bluetoothmusic.widgets.TextViewer
            android:id="@+id/emailTextViewer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_56"
            android:layout_margin="@dimen/margin_10"

            app:backgroundEditor="@drawable/ic_border"
            app:backgroundImageColor="@color/colorSlateBlue"
            app:editorSymmetricPadding="@dimen/padding_spacing_10"
            app:hintEditor="@string/enter_email"
            app:image="@drawable/ic_email"
            app:imageSymmetricPadding="@dimen/padding_spacing_10"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextViewer"
            app:symmetricPadding="@dimen/padding_spacing_1" />

        <TextView
            android:id="@+id/logoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:background="@drawable/ic_login"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@color/colorWhite"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextViewer" />

        <TextView
            android:id="@+id/updateProfileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:background="@drawable/ic_login"
            android:gravity="center"
            android:text="@string/update_profile"
            android:textColor="@color/colorWhite"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoutButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
