<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorTransparent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3"
            app:srcCompat="@mipmap/ic_launcher" />

        <com.android.bluetoothmusic.widgets.EditorView
            android:id="@+id/createPlaylistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"

            app:backgroundEditor="@drawable/ic_border"
            app:backgroundImageColor="@color/colorSlateBlue"
            app:editorSymmetricPadding="@dimen/padding_spacing_10"
            app:hintEditor="@string/enter_playlist_name"
            app:image="@drawable/ic_playlist_player"
            app:imageSymmetricPadding="@dimen/padding_spacing_10"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView"
            app:symmetricPadding="@dimen/padding_spacing_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createPlaylistName">

            <TextView
                android:id="@+id/createPlaylistButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/width_48"
                android:layout_margin="@dimen/margin_10"
                android:layout_weight="1"
                android:background="@drawable/ic_playlist"
                android:gravity="center"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/width_48"
                android:layout_margin="@dimen/margin_10"
                android:layout_weight="1"
                android:background="@drawable/ic_playlist_cancel"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
